# CodeHem

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  NEXT-STEPS.md  README.md  ROADMAP.md  ROADMAP_COMPLETENESS.md  __init__.py  architecture_review.md  ast_handler.py  cli.py  debug_import.py  function_editor.py  jira.py  language_handler.py  main.py  manual_code.py  publish.py  pyproject.toml  requirements.txt  roo_debug.py  setup.py  test.py  test_code.py  test_tree.py  test_tree_simple.py  test_ts2.py  tree_debug.py  typescript_debug.py  typescript_debug2.py
.claude/: prompt.txt  settings.local.json  source-map.txt
.trash/typescript_post_processors/: __init__.py  post_processor.py
ROADMAP/: NextTask.md  PRD-0001.md  PRD-0002.md  PRD-003.md
backup/common/: extraction_protocol.py  formatter.py
backup/python/: extraction_service.py  finder.py  formatter.py  manipulator.py  service.py  template.py
caching/: __init__.py
codehem/: __init__.py  builder.py  cli.py  extractor.py  main.py  test.py
codehem-lang-template/: cookiecutter.json
codehem/core/: Language_service.py  README.md  __init__.py  (+20 more)
core/: ast_handler.py  models.py
docs/: AI-Agent-Tutorial.md  Developer-Guide.md  Plugin-Development-Tutorial.md  QuickStart-LLM.md  Troubleshooting-Guide.md  adding_new_language.md  adding_new_languages.md  architecture.puml  codehem-sdk-user.md  component_interfaces.md  failing_tests.md  for_llm.md  input_validation.md  json_examples.md  language_component_structure.md  post_processors.md  reference.md  roadmap.md  typescript-support.md
examples/: codehem_quickstart.ipynb  input_validation_example.py  scan_ndjson.py
finder/: base.py  factory.py
languages/: __init__.py  javascript_service.py  python_service.py  registrations.py  service.py  typescript_service.py
manipulator/: __init__.py  base.py  factory.py
scripts/: prd.txt  refactor_extraction_service.py
strategies/: language_strategy.py  typescript_strategy.py
templates/: new_language_template.py
tests/: __init__.py  test_extract_code.py  test_filter_method.py  test_full_integration.py  test_language_detection.py  test_parser_robustness.py  test_patch_api.py  test_post_processor_integration.py  test_refactored_extraction_service.py  test_workspace.py
utils/: format_utils.py
(+558 files in other folders)
